# Stratos_X

./: .gitignore  CMakeLists.txt  README.md  extend_def.h  main.c  ships.c  ships.h  sleep.c  sleep.h  sound_effects.c  sounds.h  stratos.h
